# BUss-LER

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Known_Limitations.md  LICENSE  README.md  Release_Notes_v2.0.0.md  SECURITY.md  SYSTEM_OVERVIEW.md  Version_History.md  append_di.py  append_pipeline_di.py  benchmark_final.txt  check.py  check_cov.py  coverage.json  coverage_report.txt  coverage_report_98.txt  coverage_report_excluded.txt  coverage_report_final.txt  coverage_report_new.txt  di_history.txt  di_history_full.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  extract.py  fix_di.py  fix_intent.py  fix_metadata.py  fix_plan.py  fix_plan_again.py  fix_test.py  fix_trace.py  (+29 more)
.github/workflows/: ci.yml  main.yml  security.yml
DemoApp/DemoApp/: main.py  manifest.json
DemoPlugin/DemoPlugin/: plugin.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  errors.py
app/application/: di.py
app/bootstrap/: container.py  registry.py  startup.py
app/core/: context.py
app/dev/: sandbox.py
app/events/: bus.py
app/models/: __init__.py  _context_enums_note.py  ai.py  cognitive_trace.py  commands.py  context.py  conversation.py  enterprise_context.py  entity.py  enums.py  events.py  exceptions.py  goal.py  intent.py  memory.py  memory_vector.py  pagination.py  plan.py  queries.py  recommendation.py  results.py  schemas.py  twin.py
app/repositories/: cognitive_trace_repository.py  conversation_repository.py  enterprise_context_repository.py  entity_repository.py  goal_repository.py  history_repository.py  intent_repository.py  memory_repository.py  plan_repository.py  recommendation_repository.py  snapshot_repository.py  twin_repository.py  vector_repository.py
app/services/: __init__.py  cognitive_trace_service.py  context_builder.py  context_cache.py  context_dependency_graph.py  context_engine.py  context_freshness.py  context_policies.py  context_provider_registry.py  context_retry.py  context_state.py  context_strategies.py  context_validators.py  conversation_service.py  entity_service.py  gemini.py  goal_service.py  goal_state.py  intent_classifier.py  intent_service.py  intent_state.py  memory_service.py  plan_service.py  plan_state.py  planning_engine.py  qdrant.py  recommendation_engine.py  recommendation_service.py  state.py  supabase.py  twin_service.py
app/shared/: enums.py
app/shell/: bizshell.py  dispatcher.py  formatter.py  scaffold.py
app/workers/: memory_worker.py
configs/: README.md  docker-compose.yml  settings_reference.md
docs/: DEPLOYMENT.md  SDK_SPEC.md
docs/adr/: 001-dual-kernel-architecture.md  002-repository-modernization.md  003-provider-agnostic-ai-kernel.md  004-context-engine.md  005-shared-primitives.md  006-test-architecture-mirroring.md
docs/architecture/: AI_Kernel.md  ARCHITECTURE_FREEZE_v4.md  Architecture_Audit_Report.md  Architecture_Index.md  Background_Processing.md  Memory_Engine.md  Qdrant_Architecture.md  Repository_Architecture.md  index.md
docs/developer/: API_Reference.md  Configuration_Reference.md  Glossary.md  Testing_Strategy.md  getting_started.md
docs/milestones/: M4_SUMMARY.md  M6_SUMMARY.md
docs/operations/: DEPLOYMENT.md  Deployment_Checklist.md  Operations_Runbook.md  Production_Deployment_Guide.md  RUNBOOK.md
docs/reports/: Architecture_Validation_Report.md  Production_Readiness_Report.md  release_manifest.json
k8s/: config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml
migrations/: 001_digital_twin_schema.sql  002_memory_engine_schema.sql  003_intent_engine_schema.sql  004_context_engine_schema.sql
mutants/: pyproject.toml
mutants/tests/: __init__.py  conftest.py  test_smoke.py  verify_db.py
release/: milestone1_manifest.json  milestone1_release_report.json  milestone1_release_report.md
scratch/: fix_imports.py
scripts/: benchmark.py  generate_openapi.py  validate_milestone1.py
sdk/: __init__.py
tests/: conftest.py  conftest.py.bak  test_smoke.py  verify_db.py
tests/api/: test_dependencies.py  (+3 more)
(+955 files in other folders)
